--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,18 @@
 @font-face {
-    font-family: "IBM-Plex Extra-Light";
-    src: url("./fonts/IBMPlex/IBMPlexMono-ExtraLight.ttf") format("truetype");
+    font-family: "DMMono-Light";
+    src: url("./fonts/DMmono/DMMono-Light.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: "IBM-Plex Light";
-    src: url("./fonts/IBMPlex/IBMPlexMono-Light.ttf") format("truetype");
+    font-family: "DMMono-Regular";
+    src: url("./fonts/DMmono/DMMono-Regular.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: "IBM-Plex Medium";
-    src: url("./fonts/IBMPlex/IBMPlexMono-Medium.ttf") format("truetype");
+    font-family: "DMMono-Medium";
+    src: url("./fonts/DMmono/DMMono-Medium.ttf") format("truetype");
 }
+
 
 :root {
     --bg-color: black;
@@ -27,7 +28,7 @@ body {
     background-color: var(--bg-color);
     color: var(--text-color);
     margin: 0;
-    font-family: "IBM-Plex Light";
+    font-family: "DMMono-Regular";
 }
 
 div {
