--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,44 +1,103 @@
 @font-face {
-    font-family: "DMMono-Light";
-    src: url("../fonts/DMmono/DMMono-Light.ttf") format("truetype");
-}
-
-@font-face {
     font-family: "DMMono-Regular";
     src: url("../fonts/DMmono/DMMono-Regular.ttf") format("truetype");
 }
 
-@font-face {
-    font-family: "DMMono-Medium";
-    src: url("../fonts/DMmono/DMMono-Medium.ttf") format("truetype");
-}
-
-
 :root {
-    --bg-color: #111111;
-    --text-color: #cbcabe;
     --text-font-size: 16px;
     --line-height: 1.8em;
     --border-thickness: 2px;
+
+    /*Grayscale Custom*/
+    --grayscale-bg-color: #111111;
+    --grayscale-text-color: #cacaca;
+    
+    /*Catppuccin Macchiato*/
+    --catppuccin-bg-color:  #24273a;
+    --catppuccin-text-color: #cad3f5;
+    
+    /*Gruvbox Dark*/
+    --gruvbox-bg-color: #282828;
+    --gruvbox-text-color: #ebdbb2;
+    
+    /*Everforest Dark*/
+    --everforest-bg-color: #2d353b;
+    --everforest-text-color: #d3c6aa;
+    
+    /*Terminal Aggressive*/
+    --terminal-bg-color: black;
+    --terminal-color: lime;
+    
+    --current-bg-color: var(--grayscale-bg-color);
+    --current-text-color: var(--grayscale-text-color);
 }
 
 html {
     scroll-behavior: smooth;
 }
 
+body > input {
+    display: none;
+}
+
 body {
-    background-color: var(--bg-color);
-    color: var(--text-color);
     margin: 0;
-    font-family: "DMMono-Regular";
+}
+
+#view {
+    margin: 0;
     width: 100vw;
     height: 100vh;
     display: grid;
     justify-items: centers;
+
+}
+
+#view {
+    background-color: var(--current-bg-color);
+    color: var(--current-text-color);
+    font-family: "DMMono-Regular"
+}
+
+#grayscale-theme:checked ~ #view {
+    --current-bg-color: var(--grayscale-bg-color);
+    --current-text-color: var(--grayscale-text-color)
+}
+
+#catppuccin-theme:checked ~ #view {
+    --current-bg-color: var(--catppuccin-bg-color);
+    --current-text-color: var(--catppuccin-text-color);
+}
+
+#gruvbox-theme:checked ~ #view {
+    --current-bg-color: var(--gruvbox-bg-color);
+    --current-text-color: var(--gruvbox-text-color);
+}
+
+#everforest-theme:checked ~ #view {
+    --current-bg-color: var(--everforest-bg-color);
+    --current-text-color: var(--everforest-text-color);
+}
+#terminal-theme:checked ~ #view {
+    --current-bg-color: var(--terminal-bg-color);
+    --current-text-color: var(--terminal-color);
 }
 
 a:link, a:visited {
-    color: var(--text-color);
+    color: var(--current-text-color);
+}
+
+#theme-menu {
+    position: absolute;
+    top: 1em;
+    left: 1em;
+}
+#theme-menu summary {
+    padding-bottom: 1em;
+}
+
+#theme-menu p {
+    margin: 0;
 }
 
 #content {
@@ -63,8 +122,8 @@ a:link, a:visited {
     animation-fill-mode: forwards;
     animation-delay: 1s;
     content: "";
-    color: var(--bg-color);
-    background-color: var(--text-color);
+    color: var(--current-bg-color);
+    background-color: var(--current-text-color);
 }
 
 @keyframes cycle-interests {
@@ -135,7 +194,7 @@ Copyright 2024 Oskar Wickström
     position: relative;
     padding-left: 1.5ch;
     margin-left: 1.5ch;
-    border-left: var(--border-thickness) solid var(--text-color);
+    border-left: var(--border-thickness) solid var(--current-text-color);
   }
   .tree ul li:before {
     position: absolute;
@@ -144,7 +203,7 @@ Copyright 2024 Oskar Wickström
     left: 0;
     content: "";
     width: 1ch;
-    border-bottom: var(--border-thickness) solid var(--text-color);
+    border-bottom: var(--border-thickness) solid var(--current-text-color);
   }
   .tree ul li:last-child {
     border-left: none;
@@ -156,7 +215,18 @@ Copyright 2024 Oskar Wickström
     left: 0;
     content: "";
     height: calc(var(--line-height) / 2);
-    border-left: var(--border-thickness) solid var(--text-color);
+    border-left: var(--border-thickness) solid var(--current-text-color);
   }
 
 /*END of Wickström's code*/
+
+
+#js-free {
+    position: absolute;
+    bottom: 1em;
+    right: 1em;
+}
+
+#js-free p {
+    margin: 0;
+}
