--- a/_includes/trees.html
+++ b/_includes/trees.html
@@ -1,4 +1,9 @@
 <div id="trees">
+    <ul id="home-tree" class="tree">
+        <details>
+            <summary><a href="/index.html">/</a></summary>
+        </details>
+    </ul>
     <ul id="projects-tree" class="tree">
         <details>
             <summary>/src/projects</summary>
