--- a/_includes/trees.html
+++ b/_includes/trees.html
@@ -30,15 +30,11 @@
             <summary>/_posts</summary>
             <li>
                 <ul class="tree-parent">
+                    {% for post in site.posts limit:3 %}
                     <li>
-                        <a href="/404.html">Linux Issues</a>
+                        <a href="{{ post.url }}">{{ post.title }}</a>
                     </li>
-                    <li>
-                        <a href="/2024/10/25/memories-and-dreams.html">On memories and dreams</a>
-                    </li>
-                    <li>
-                        <a href="/404.html">Animal farm</a>
-                    </li>
+                    {% endfor %}
                     <li>
                         <a href="/404.html">more...</a>
                     </li>
