--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,6 +18,7 @@
         </div>
       </div>
       <div id="content">
+        <h1>{{ page.title }}</h1>
         {{ content }}
       </div>
     </div>
