--- a/_includes/trees.html
+++ b/_includes/trees.html
@@ -36,7 +36,7 @@
                     </li>
                     {% endfor %}
                     <li>
-                        <a href="/404.html">more...</a>
+                        <a href="/src/posts-hub.html">more...</a>
                     </li>
                 </ul>
             </li>
