--- a/_includes/trees.html
+++ b/_includes/trees.html
@@ -34,6 +34,9 @@
                     <li>
                         <a href="/blog">more...</a>
                     </li>
+                    <li>
+                        <a href="/feed/blog.xml">Atom Feed</a>
+                    </li>
                 </ul>
             </li>
         </details>
