--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -30,6 +30,7 @@
 				<div id="trees-container">
 					{% include trees.html %}
 				</div>
+				{% include site-info.html %}
 			</div>
 			<div id="content">
 				<h1>Working on it...</h1>
