--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -109,7 +109,7 @@
         content: "playing D&D as DM";
     }
     85% {
-        content: "divig into more rabbit holes";
+        content: "finding new hobbies";
     }
     90% {
         content: "hiking";
