--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -2,11 +2,13 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>{{ page.title }}</title>
 		{% include general-style.html %}
 		{% include themes-style.html %}   
 		{% include trees-style.html %}
 		{% include post-style.html %}
+		{% include project-style.html %}
 		{% if page.style %}
 			{% include {{page.style}}-style.html %}
 		{% endif %}
@@ -33,7 +35,23 @@
 				{% include site-info.html %}
 			</div>
 			<div id="content">
-				<h1>Working on it...</h1>
+				<img id="header-image" src="/src/assets/{{page.slug}}.webp">
+				<h1>{{ page.title }}</h1>
+				<div id="info">
+					{% if page.tags %}
+					{% for tag in page.tags %}
+					<p class="tag">{{ tag }}</p>
+					{% endfor %}
+					{% endif %}
+					{% if page.github %}
+					<a href="{{page.github}}">GitHub</a>
+					{% endif %}
+					{% if page.website %}
+					<a href="{{page.website}}">Website</a>
+					{% endif %}
+				</div>
+				<hr>
+				{{ content }}
 			</div>
 		</div>
 	</body>
