--- a/_includes/trees.html
+++ b/_includes/trees.html
@@ -5,7 +5,7 @@
         </details>
     </ul>
     <ul id="projects-tree" class="tree">
-        <details {% if page.url == "/" %}open{% endif %}>
+        <details>
             <summary>/projects</summary>
             <li>
                 <ul class="tree-parent">
@@ -22,7 +22,7 @@
         </details>
     </ul>
     <ul id="blogs-tree" class="tree">
-        <details {% if page.url == "/" %}open{% endif %}>
+        <details>
             <summary>/blog</summary>
             <li>
                 <ul class="tree-parent">
@@ -39,7 +39,7 @@
         </details>
     </ul>
     <ul id="about-tree" class="tree">
-        <details {% if page.url == "/" %}open{% endif %}>
+        <details>
             <summary>/about</summary>
             <li>
                 <ul class="tree-parent">
@@ -54,7 +54,7 @@
         </details>
     </ul>
     <ul id="contact-tree" class="tree">
-        <details {% if page.url == "/" %}open{% endif %}>
+        <details>
             <summary>/contact</summary>
             <li>
                 <ul class="tree-parent">
