--- a/src/styles/themes.css
+++ b/src/styles/themes.css
@@ -71,6 +71,7 @@ a:hover {
 #theme-menu {
     position: absolute;
     top: 1em;
+    z-index: 999;
 }
 #theme-menu summary {
     padding-bottom: 1em;
