--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -11,7 +11,6 @@
     align-items: center;
     display: grid;
     width: 60vw;
-    height: 22em;
     border: var(--border-thickness) solid var(--current-text-color);
     padding: 3em;
 }
@@ -125,4 +124,8 @@
 
 #home-tree {
     display: none;
+}
+
+#trees {
+    padding: 0 2em;
 }
