added umami analytics

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,7 @@
 		{% include themes-style.html %}   
 		{% include trees-style.html %}
 		{% include post-style.html %}
+		{% include umami-analytics.html %}
 		{% if page.style %}
 			{% include {{page.style}}-style.html %}
 		{% endif %}
