--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -9,6 +9,7 @@
 		{% include trees-style.html %}
 		{% include post-style.html %}
 		{% include project-style.html %}
+		{% include umami-analytics.html %}
 		{% if page.style %}
 			{% include {{page.style}}-style.html %}
 		{% endif %}
