--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -3,11 +3,22 @@
     src: url("../fonts/DMmono/DMMono-Regular.ttf") format("truetype");
 }
 
+@font-face {
+    font-family: "Merriweather-Regular";
+    src: url("../fonts/Merriweather/Merriweather-Regular.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "IBM_VGA";
+    src: url("../fonts/IBM_VGA/Mx437_IBM_VGA_8x16.ttf") format("truetype");
+}
+
 :root {
     --text-font-size: 18px;
     --mobile-font-size: 14px;
     --line-height: 1.8em;
     --border-thickness: 2px;
+    --paragraph-font: "Merriweather-Regular";
 }
 
 html {
@@ -30,7 +41,7 @@ body {
 #view {
     background-color: var(--current-bg-color);
     color: var(--current-text-color);
-    font-family: "DMMono-Regular";
+    font-family: var(--regular-font);
     line-height: var(--line-height);
     font-size: var(--text-font-size);
 }
