--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -60,6 +60,11 @@ h3 {
     font-size: 1.5em;
 }
 
+p:not(.tag) {
+    font-family: var(--paragraph-font);
+    font-size: 20px;
+}
+
 p, ul, ol {
     margin-bottom: 2em;
 }
