add: dropdown animation
Added to:
- tree
- themes

--- a/_includes/themes.html
+++ b/_includes/themes.html
@@ -1,18 +1,22 @@
-<details id="theme-menu">
-    <summary>Themes</summary>
-    <div class="theme">
-        <label class="theme-label" for="grayscale-theme">Grayscale</label>
+<div id="theme-menu">
+    <details id="theme-menu-details">
+        <summary>Themes</summary>
+    </details>
+    <div class="details-dropdown">
+        <div class="theme">
+            <label class="theme-label" for="grayscale-theme">Grayscale</label>
+        </div>
+        <div class="theme">
+            <label class="theme-label" for="catppuccin-theme">Catppuccin</label>
+        </div>
+        <div class="theme">
+            <label class="theme-label" for="gruvbox-theme">Gruvbox</label>
+        </div>
+        <div class="theme">
+            <label class="theme-label" for="everforest-theme">Everforest</label>
+        </div>
+        <div class="theme">
+            <label class="theme-label" for="terminal-theme">Terminal</label>
+        </div>
     </div>
-    <div class="theme">
-        <label class="theme-label" for="catppuccin-theme">Catppuccin</label>
-    </div>
-    <div class="theme">
-        <label class="theme-label" for="gruvbox-theme">Gruvbox</label>
-    </div>
-    <div class="theme">
-        <label class="theme-label" for="everforest-theme">Everforest</label>
-    </div>
-    <div class="theme">
-        <label class="theme-label" for="terminal-theme">Terminal</label>
-    </div>
-</details>
+</div>
