--- a/src/styles/themes.css
+++ b/src/styles/themes.css
@@ -89,7 +89,7 @@ a:hover {
     margin-right: 1em;
 }
 
-/*Manages the animation dropdown*/
+/*Manages the dropdown animation*/
 
 .details-dropdown {
     overflow: hidden;
