--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,6 +27,11 @@
 	<body>
 		{% include themes-inputs.html %}
 		<div id="view">
+			<details id="mobile-sidebar-toggle">
+				<summary>
+					<span>navigation</span>
+				</summary>
+			</details>
 			<div id="sidebar">
 				{% include themes.html %}
 				<div id="trees-container">
