fix: responsive homepage
now you can view the homepage from a mobile

--- a/src/styles/trees-horizontal.css
+++ b/src/styles/trees-horizontal.css
@@ -1,4 +1,10 @@
-#trees {
-    grid-template-columns: auto auto auto auto;
-    align-self: flex-end;
+@media (min-width: 940px) {
+    #trees {
+        grid-template-columns: auto auto auto auto;
+        align-self: flex-end;
+    }
+
+    #trees {
+        padding: 0 2em;
+    }
 }
