--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,10 +1,11 @@
 #view {
     justify-items: center;
     display: grid;
+    grid-template-columns: auto 0;
 }
 
 #theme-menu {
-    margin-left: 1em;
+    left: 1em;
 }
 
 #content {
@@ -126,6 +127,68 @@
     display: none;
 }
 
-#trees {
-    padding: 0 2em;
+/*For mobile nerds*/
+@media (max-width: 940px) {
+
+    #view {
+        display: block;
+    }
+
+    #content {
+        width: fit-content;
+        border: none;
+        word-wrap: break-word;
+        padding: 2em;
+        margin: 0;
+        display: block;
+    }
+    
+    #welcome {
+        display: block;
+    }
+    
+    #pfp-container {
+        display: grid;
+        justify-content: center;
+        margin: 0;
+    }
+
+    #pfp-container > img {
+        height: 20vh;
+        width: 20vh;
+    }
+
+    #trees {
+        padding: 0;
+    }
+
+    #other-buttons {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    #theme-menu {
+        position: relative;
+        padding: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        margin: 0;
+    }
+
+    #site-info {
+        position: relative;
+        padding: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+    }
+
+
 }
