--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,6 +32,9 @@
 					<span>navigation</span>
 				</summary>
 			</details>
+			<details open="" id="desktop-sidebar-toggle">
+				<summary></summary>
+			</details>
 			<div id="sidebar">
 				{% include themes.html %}
 				<div id="trees-container">
