--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -9,20 +9,68 @@
     padding-bottom: 8em;
 }
 
+/* Changing order so that desktop-sidebar-toggle
+works and is after the sidebar */
+#desktop-sidebar-toggle {
+    order: 2;
+}
+
+#sidebar {
+    order: 1;
+}
+
+#content {
+    order: 3;
+}
+
+
 #mobile-sidebar-toggle {
     display: none;
 }
+
+#desktop-sidebar-toggle {
+    display: block;
+    width: 0;
+    height: 0;
+    margin-top: 1em;
+    margin-left: 1em;
+    opacity: 50%;
+}
+
+#desktop-sidebar-toggle:hover {
+    opacity: 100%;
+}
+
+#desktop-sidebar-toggle > summary {
+    list-style-type: ">>";
+}
+
+#desktop-sidebar-toggle[open] > summary {
+    list-style-type: "<<";
+}
+
+
 
 #sidebar {
     position: sticky;
     top: 0em;
     padding-left: 1em;
     display: grid;
-    grid-template-rows: 10em auto 10em;
+    grid-template-rows: 2em auto 2em;
+    row-gap: 2em;
     height: 100vh;
-    border-right: var(--border-thickness) solid var(--current-text-color);
+    max-height: 100vh;
+    max-width: 0;
+    overflow: hidden;
+    border-right: none;
+    transition: max-width 250ms ease-out;
+}
+
+
+#desktop-sidebar-toggle[open] ~ #sidebar {
     max-width: 20ch;
-    min-width: 20ch;
+    transition: max-width 250ms ease-out;
+    border-right: var(--border-thickness) solid var(--current-text-color);
 }
 
 #theme-menu {
@@ -31,10 +79,19 @@
 
 #trees-container {
     align-self: center;
+    overflow-y: auto;
+    justify-self: stretch;
+    max-height: 100%;
 }
 
 #trees {
     position: relative;
+}
+
+#site-info {
+    position: relative;
+    bottom: 0;
+    left: 0;
 }
 
 .tag::before {
@@ -71,7 +128,7 @@ h3 {
 
 p:not(.tag),
 li,
-a {
+#content a {
     font-family: var(--paragraph-font);
 }
 
@@ -125,24 +182,22 @@ table td {
         margin-left: 1em;
     }
 
+    #desktop-sidebar-toggle {
+        display: none;
+    }
+
     
-    #mobile-sidebar-toggle[open] + #sidebar {
+    #mobile-sidebar-toggle[open] ~ #sidebar {
         max-height: 100vh;
     }
 
     #sidebar {
         max-height: 0;
         overflow: hidden;
-        max-width: 100vw;
+        max-width: 100vw !important;
         position: relative;
         height: fit-content;
         grid-template-rows: auto auto auto;
-    }
-
-    #site-info {
-        position: relative;
-        bottom: 0;
-        left: 0;
     }
 
     #trees ul {
