--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -30,9 +30,10 @@ works and is after the sidebar */
 
 #desktop-sidebar-toggle {
     display: block;
+    position: sticky;
     width: 0;
     height: 0;
-    margin-top: 1em;
+    top: 1em;
     margin-left: 1em;
     opacity: 50%;
 }
@@ -54,7 +55,7 @@ works and is after the sidebar */
 #sidebar {
     position: sticky;
     top: 0em;
-    padding-left: 1em;
+    padding-left: 0;
     display: grid;
     grid-template-rows: 2em auto 2em;
     row-gap: 2em;
@@ -68,6 +69,7 @@ works and is after the sidebar */
 
 
 #desktop-sidebar-toggle[open] ~ #sidebar {
+    padding-left: 1em;
     max-width: 20ch;
     transition: max-width 250ms ease-out;
     border-right: var(--border-thickness) solid var(--current-text-color);
