--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -62,16 +62,18 @@ works and is after the sidebar */
     height: 100vh;
     max-height: 100vh;
     max-width: 0;
+    min-width: 0;
     overflow: hidden;
     border-right: none;
-    transition: max-width 250ms ease-out;
+    transition: max-width 250ms ease-out, min-width 250ms ease-out;
 }
 
 
 #desktop-sidebar-toggle[open] ~ #sidebar {
     padding-left: 1em;
     max-width: 20ch;
-    transition: max-width 250ms ease-out;
+    min-width: 20ch;
+    transition: max-width 250ms ease-out, min-width 250ms ease-out;
     border-right: var(--border-thickness) solid var(--current-text-color);
 }
 
